# kindle-home-display

./: .gitignore  LICENSE  Pipfile  README.md  calendars.txt  config.json  main.py  test_calendar.py
cal/: cal.py  gcal_helper.py  gcalhelper.py
device/: .gitignore  .shellcheckrc  Makefile  how_to_setup_ssh.txt
device/KUAL/kindle-dash/: menu.json
device/src/: dash.sh  logging.sh  ssh-start.sh  ssh-stop.sh  start.sh  stop.sh  wait-for-wifi.sh
device/src/local/: env.sh  fetch-dashboard.sh  low-battery.sh
device/src/next-wakeup/: Cargo.toml
device/src/next-wakeup/.cargo/: config.toml
device/src/next-wakeup/src/: main.rs
device/src_new/: 4dcube.sh  dash.sh  dashboard.sh  device.sh
device/src_new/utils/: logging.sh
device/tests/: test_logging.sh
gcal/: gcal.py  gcal_helper.py  gcalhelper.py  token.pickle
owm/: owm.py
render/: dashboard.html  dashboard_template.html  font_helper.py  render.py  render_helper.py  render_svg.py
render/css/: styles.css
server/: .gitignore  LICENSE.txt  README.md  config.toml  hatch.toml  pyproject.toml  ruff_defaults.toml  weather.json
server/scripts/: create_config.py
server/src/server/: __about__.py  __main__.py  activity.py  app.py  cal.py  cli.py  config.ini  config.py  config.toml  event.py  main.py  owm.py  render.py  server.py  todoist.py
server/src/server/cal/: cal.py  event.py  gcal_helper.py  gcalhelper.py
server/src/server/calendar_plugins/: gcal.py
server/src/server/config/: config.py
server/src/server/owm/: owm.py
server/src/server/render/: font_helper.py  render.py  render_helper.py
server/tests/: __init__.py  test_activity.py  test_calendar.py  test_config.py  test_event.py  test_pydantic.py  test_render.py
tests/: test_calendar.py
